<resources>
    <string name="app_name">BookSelling</string>
    <string name="title_activity_all_books">AllBooks</string>
    <string name="title_activity_add_item">AddItem</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_layout">LoginLayoutActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_my_books_class">MyBooksClass</string>
    <string name="title_activity_item_details">ItemDetails</string>

    <!-- Strings for the item -->
    <string name="book_title">Titolo</string>
    <string name="book_author">Autore</string>
    <string name="book_price">Prezzo</string>
    <string name="book_description">Descrizione</string>
    <string name="book_edition">Edizione</string>
    <string name="book_publishing_year">Anno di pubblicazione</string>
    <string name="book_language">Lingua</string>
    <string name="book_isbn">Codice ISBN</string>
    <string name="book_editor">Editore</string>

    <!-- array of languages -->
    <array name="languages">
        <item>Italiano</item>
        <item>Inglese</item>
        <item>Spagnolo</item>
        <item>Francese</item>
        <item>Spanglish</item>
        <item>Tedesco</item>
    </array>
</resources>
